--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -15,6 +15,7 @@ dependencies {
   runtime 'org.apache.logging.log4j:log4j-core'
   implementation 'org.apache.commons:commons-lang3'
   compile group: 'org.mapdb', name: 'mapdb', version: '3.0.7'
+  implementation 'org.rocksdb:rocksdbjni'
 
   testImplementation 'org.mockito:mockito-core'
   testImplementation project(path: ':ethereum:datastructures', configuration: 'testSupportArtifacts')
