--- a/fuzz/build.gradle
+++ b/fuzz/build.gradle
@@ -6,4 +6,6 @@ dependencies {
     implementation project(':util')
 
     implementation 'org.apache.tuweni:tuweni-bytes'
+
+    testImplementation testFixtures(project(':ethereum:datastructures'))
 }
