--- a/bls/build.gradle
+++ b/bls/build.gradle
@@ -4,6 +4,7 @@ dependencies {
   api 'org.bouncycastle:bcprov-jdk15on'
 
   implementation 'org.apache.tuweni:tuweni-bytes'
+  implementation 'org.apache.tuweni:tuweni-bytes'
   implementation 'org.apache.tuweni:tuweni-crypto'
   implementation 'org.apache.tuweni:tuweni-ssz'
   implementation 'org.miracl.milagro.amcl:milagro-crypto-java'
